# municipal-triage-tool

./: .gitignore  PRD.md  TASKS.md  ai_pipeline.py  auth.py  config.py  database.py  docker-compose.yml  main.py  models.py  notification_service.py  pyproject.toml  run_live_ai.py  schemas.py  seed_db.py  set_admin_credentials.py  tenant_service.py  ticket_service.py
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 0db635d7ea78_add_token_tracking.py  3f315960e94e_initial_schema.py  56428a83aa8a_add_extracted_email_and_phone_to_tickets.py  7d1271e0f05e_add_compliance_and_ai_extraction_columns.py  8d08955dbadf_add_tenant_login_credentials.py  bba58c4b81b5_add_sender_email_approved_at_citizen_.py  ea184797ef62_add_token_tracking.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  adminApi.ts  adminAuth.ts  index.css  tenantApi.ts  tenantAuth.ts  types.ts
frontend/src/components/: ApprovedTicketDetail.tsx  Header.tsx  TicketDetail.tsx  TicketQueue.tsx
frontend/src/pages/: AdminDashboard.tsx  AdminLogin.tsx  TenantLogin.tsx
routers/: admin.py  tickets.py  webhook.py
tests/: test_admin_api.py  test_ai_pipeline.py  test_api.py  test_auth.py  test_db.py  test_notifications.py  test_tenant_auth.py  test_ticket_review.py
