[project]
name = "municipaltriagetool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.2",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "httpx2>=2.7.0",
    "pytest>=9.1.1",
]
